cmake_minimum_required(VERSION 3.9)
project(HR)

set(CMAKE_CXX_STANDARD 14)


IF (WIN32)
    message("win")
ELSEIF (APPLE)
    message("apple")
    add_compile_options(-g)
    include_directories(libxl/include_cpp)
    link_directories(libxl/lib64)
ELSEIF (UNIX)
    message("UNIX")
    add_compile_options(-g)
    include_directories(libxl/include_cpp)
    link_directories(libxl/lib64)
ELSE ()
    message("OTHER")
ENDIF ()

add_executable(HR main.cpp HR_graph.cpp HR_node.cpp LibXLHelper.cpp LibXLHelper.h)

IF (WIN32)
    message("win")
ELSEIF (APPLE)
    target_link_libraries(HR xl)
ELSEIF (UNIX)
    target_link_libraries(HR xl)
ELSE ()
    message("OTHER")
ENDIF ()